@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.6.14
-Date: 2015-11-06
+Version: 0.6.15
+Date: 2015-11-10
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
