@@ -1,0 +1,25 @@
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'/>
+  <title>Example Categorization Task</title>
+  <script type='text/javascript' src='https://s3.amazonaws.com/mturk-public/externalHIT_v1.js'></script>
+ </head>
+ <body>
+  <form name='mturk_form' method='post' id='mturk_form' action='https://www.mturk.com/mturk/externalSubmit'>
+  <input type='hidden' value='' name='assignmentId' id='assignmentId'/>
+  <h1>What is this an image of?</h1>
+  <img src="${imageurl}" alt="${imageurl}" style="width=120px; display:block; margin-left:auto; margin-right:auto;" />
+  <p>What is this an image of?</p>
+  <p>
+    <input type="radio" name="QuestionId1" value="person" id="q1a" /><label for="q1a">Person</label><br />
+    <input type="radio" name="QuestionId1" value="animal" id="q1b" /><label for="q1b">Animal</label><br />
+    <input type="radio" name="QuestionId1" value="fruit" id="q1c" /><label for="q1c">Fruit</label><br />
+    <input type="radio" name="QuestionId1" value="vegetable" id="q1d" /><label for="q1d">Vegetable</label><br />
+    <input type="radio" name="QuestionId1" value="something else" id="q1e" /><label for="q1e">Something else</label>
+  </p>
+  <input type="hidden" name="imageurl" value="${imageurl}" />
+  <p><input type='submit' id='submitButton' value='Submit' /></p></form>
+  <script>turkSetAssignmentID();</script>
+ </body>
+</html>
