@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+      <title>Survey Link Example</title>
+    </head>
     <body>
         <div style="font-family:sans-serif;margin-left:10%;margin-right:10%;">
             <p style="font-weight:bold;margin-left:15%;margin-right:15%;font-size:2em;">Pipe MTurk parameters via URL</p>
